Tue Aug  8 07:46:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/generate_rel_manpages:
        * bin/make_release:
          Did a little bit of cleanup removing old things

Tue Aug  8 07:11:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Select_Reactor_T.cpp (dump):
          Removed usage of not needed operator++ on the handle set

Mon Aug  7 08:02:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Handle_Set.{h,cpp}:
          Removed operator++, it is deprecated and nothing more then a noop

Fri Aug  4 07:57:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Asynch_IO.h:
        * ace/Event_Handler.h:
        * ace/Framework_Component_T.h:
        * ace/Hash_Map_Manager_T.h:
        * ace/IO_SAP.h:
        * ace/Local_Tokens.h:
        * ace/LSOCK_Connector.h:
        * ace/Map_Manager.h:
        * ace/Map_T.h:
        * ace/WFM_Reactor.h:
          Doxygen improvements

Thu Aug  3 10:39:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Connector.h:
          Improved documentation

Wed Aug  2 22:54:24 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * THANKS: Added Eric Danielou to the hall of fame.

Wed Aug  2 21:27:59 UTC 2006  Adam Mitz  <mitza@ociweb.com>

        * bin/PerlACE/Run_Test.pm:

          Added two new packaged-scoped variables, $PerlACE::ACE_ROOT and
          $PerlACE::TAO_ROOT.  $PerlACE::TAO_ROOT is set to the TAO_ROOT
          environment variable, if one exists.  If not it is set to
          $ACE_ROOT/TAO.  $PerlACE::ACE_ROOT is the same as the ACE_ROOT
          envrionment variable so it's just there for convenience and for
          symmetry.

Wed Aug  2 20:19:04 UTC 2006  Adam Mitz  <mitza@ociweb.com>

        * bin/tao_other_tests.lst:
          Added new test (TAO/orbsvcs/tests/ImplRepo/Bug_2604_Regression).

Wed Aug  2 18:16:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Connector.cpp: